# Hoopla

./: .gitignore  README.md  pyproject.toml
cli/: keyword_search_cli.py  semantic_search_cli.py
utilities/: inverted_index.py  text_utils.py
