[project]
name = "hoopla"
version = "0.1.0"
description = "A CLI tool for searching movie titles by keyword"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "nltk==3.9.1",
    "sentence-transformers>=5.5.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true

[project.scripts]
keyword_search = "cli.keyword_search_cli:main"
semantic_search = "cli.semantic_search_cli:main"
